[package]
name = "rust_discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

tokio = { version = "1.21.2", features = ["full"] }

json = "0.12"

serenity = "0.11.5"

roux = "2.2.3"